# Parkinson-s-project

./: .dockerignore  .env.example  .gitignore  DOKPLOY.md  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  playwright.config.ts
drizzle/: 0000_misty_tarantula.sql  0001_tearful_rhodey.sql  0002_aromatic_namor.sql  0003_gifted_carmella_unuscione.sql  0004_same_dose_pairing.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
ml/: .gitignore  Dockerfile  README.md  pyproject.toml
ml/models/demo-cnn-v1/: metrics.json  model.keras
ml/models/demo-feature-v1/: metrics.json  model.json
ml/src/tremor_ml/: __init__.py  api.py  dataset.py  generate_synthetic_dataset.py  model.py  preprocess.py  train.py  train_cnn.py
ml/tests/: test_api.py  test_preprocess.py
scripts/: migrate.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/doctor/: page.tsx
src/app/forbidden/: page.tsx
src/app/patient/: page.tsx
src/components/: dashboard-navigation.tsx  dashboard-shell.tsx  empty-state.tsx
src/db/: client.ts  schema.ts
src/features/auth/: sign-in-form.tsx  sign-out-button.tsx  sign-up-form.tsx
src/features/doctor/: data.ts
src/features/patient/: data.ts
src/features/tremor-test/: actions.ts  comparison-guidance.test.ts  comparison-guidance.ts  comparison.test.ts  comparison.ts  ml-client.test.ts  ml-client.ts  pairing.test.ts  pairing.ts  personal-alert.test.ts  personal-alert.ts  types.ts  (+4 more)
src/lib/: env.ts  routes.ts  safety.ts
tests/e2e/: core-flow.spec.ts
(+41 files in other folders)
